@@ -2,6 +2,22 @@ require 'rake/dsl_definition'
 require 'rake/contrib/compositepublisher'
 
 module Rake
+  # Manage several publishers as a single entity.
+  class CompositePublisher # :nodoc:
+    def initialize
+      @publishers = []
+    end
+
+    # Add a publisher to the composite.
+    def add(pub)
+      @publishers << pub
+    end
+
+    # Upload all the individual publishers.
+    def upload
+      @publishers.each { |p| p.upload }
+    end
+  end
 
   # Publish an entire directory to an existing remote directory using
   # SSH.
