@@ -10,6 +10,7 @@ Enhancements:
  * Removed Rake::TaskLib#paste
  * Removed SshDirPublisher, SshFreshDirPublisher, SshFilePublisher
    from lib/rake/contrib/publisher.rb
+ * Move CompositePublisher to lib/rake/contrib/sshpublisher.rb
 
 === 10.5.0 / 2016-01-13
 
